# customer-shopping-segmentation

./: Makefile  README.md  pyproject.toml
notebooks/: clustering.ipynb  eda.ipynb
reports/: eda_report.html  feature_engineering_report.html
