[tool.poetry]
name = "customer-shopping-segmentation"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Maxim Borodynya <borody.maxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaskierM/customer-shopping-segmentation"
keywords = ["ml", "clustering", "analysis", "shopping", "retail"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
yellowbrick = "^1.5"
ydata-profiling = "^4.6.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
